--- a/res/layout/forgot_password_popup.xml
+++ b/res/layout/forgot_password_popup.xml
@@ -27,13 +27,13 @@
             custom:fonttype="trebuchet_ms" />
 
         <EditText
-            android:id="@+id/edit_email"
+            android:id="@+id/editMobileNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="start"
             android:hint="@string/enter_email_id"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
             android:padding="6dp"
             android:singleLine="true"
             android:textColor="@color/white"
