--- a/res/layout/base_layout.xml
+++ b/res/layout/base_layout.xml
@@ -3,7 +3,7 @@
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/srkbg" >
+    android:background="@color/white" >
 
     <LinearLayout
         android:layout_width="match_parent"
