--- a/res/layout/post_documents.xml
+++ b/res/layout/post_documents.xml
@@ -169,6 +169,7 @@
                     android:id="@+id/editAadharName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionNext"
                     android:inputType="text"
                     android:textSize="15sp" />
 
@@ -185,6 +186,7 @@
                     android:id="@+id/editAadharNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionDone"
                     android:inputType="text"
                     android:padding="3dp"
                     android:textSize="15sp" />
