--- a/res/layout/addressuserlayout.xml
+++ b/res/layout/addressuserlayout.xml
@@ -14,6 +14,7 @@
         android:hint="@string/enter_address"
         android:inputType="text"
         android:padding="3dp"
+        android:imeOptions="actionDone"
         android:textSize="15sp" >
     </EditText>
 
