--- a/res/layout/sliding_left_menu.xml
+++ b/res/layout/sliding_left_menu.xml
@@ -27,6 +27,7 @@
                 android:layout_margin="5dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/missing_avatar"
+                android:visibility="gone"
                 custom:border_color="@color/white"
                 custom:border_width="2dp" />
 
