Forgot password hint
Changed hint for forgot password popup

--- a/res/layout/forgot_password_popup.xml
+++ b/res/layout/forgot_password_popup.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="start"
-            android:hint="@string/enter_email_id"
+            android:hint="@string/enter_mobile_number"
             android:inputType="number"
             android:padding="6dp"
             android:singleLine="true"
