--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,9 +12,9 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/sabrent" >
+            android:src="@drawable/logo" >
         </ImageView>
 
         <LinearLayout
