--- a/res/layout/activity_adress_documents.xml
+++ b/res/layout/activity_adress_documents.xml
@@ -122,14 +122,22 @@
                     android:gravity="center_vertical"
                     android:orientation="vertical" >
 
-                    <EditText
-                        android:id="@+id/editCityTown"
+                    <com.utils.CustomTextView
+                        android:id="@+id/btnSelectCity"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="text"
-                        android:padding="3dp"
-                        android:textSize="15sp" >
-                    </EditText>
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/blue_button_selector"
+                        android:drawableEnd="@drawable/ic_arrow_down_"
+                        android:drawableRight="@drawable/ic_arrow_down_"
+                        android:gravity="center_vertical"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:padding="5dp"
+                        android:singleLine="true"
+                        android:text="@string/select_city"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        custom:fonttype="trebuchet_ms" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -403,8 +411,8 @@
                 <EditText
                     android:id="@+id/editAadharNumber"
                     android:layout_width="match_parent"
-                    android:imeOptions="actionDone"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionDone"
                     android:inputType="text"
                     android:padding="3dp"
                     android:textSize="15sp" />
