--- a/res/layout/post_ad_preview.xml
+++ b/res/layout/post_ad_preview.xml
@@ -97,10 +97,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:gravity="center_vertical"
                     android:marqueeRepeatLimit="marquee_forever"
-                    android:padding="8dp"
+                    android:padding="3dp"
                     android:singleLine="true"
                     android:text="@string/sub_product_category"
                     android:textColor="@color/black"
@@ -112,10 +112,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:gravity="center_vertical"
                     android:marqueeRepeatLimit="marquee_forever"
-                    android:padding="8dp"
+                    android:padding="3dp"
                     android:singleLine="true"
                     android:textColor="@color/black"
                     android:textSize="14sp"
@@ -216,10 +216,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_margin="5dp"
+                    android:layout_margin="2dp"
                     android:gravity="center_vertical"
                     android:marqueeRepeatLimit="marquee_forever"
-                    android:padding="8dp"
+                    android:padding="3dp"
                     android:singleLine="true"
                     android:textColor="@color/black"
                     android:textSize="14sp"
@@ -607,76 +607,84 @@
                 android:textSize="14sp"
                 custom:fonttype="trebuchet_ms" />
 
-            <com.utils.CustomTextView
-                android:id="@+id/address"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="2dp"
-                android:gravity="center_vertical"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="3dp"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                custom:fonttype="trebuchet_ms" />
+                android:layout_margin="5dp"
+                android:orientation="vertical"
+                android:padding="10dp" >
 
-            <com.utils.CustomTextView
-                android:id="@+id/city"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="2dp"
-                android:gravity="center_vertical"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="3dp"
-                android:singleLine="true"
-                android:text="@string/select_city"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                custom:fonttype="trebuchet_ms" />
+                <com.utils.CustomTextView
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="2dp"
+                    android:gravity="center_vertical"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:padding="3dp"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    custom:fonttype="trebuchet_ms" />
 
-            <com.utils.CustomTextView
-                android:id="@+id/state"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="2dp"
-                android:gravity="center_vertical"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="3dp"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                custom:fonttype="trebuchet_ms" />
+                <com.utils.CustomTextView
+                    android:id="@+id/city"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="2dp"
+                    android:gravity="center_vertical"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:padding="3dp"
+                    android:singleLine="true"
+                    android:text="@string/select_city"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    custom:fonttype="trebuchet_ms" />
 
-            <com.utils.CustomTextView
-                android:id="@+id/pincode"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="2dp"
-                android:gravity="center_vertical"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="3dp"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                custom:fonttype="trebuchet_ms" />
+                <com.utils.CustomTextView
+                    android:id="@+id/state"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="2dp"
+                    android:gravity="center_vertical"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:padding="3dp"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    custom:fonttype="trebuchet_ms" />
 
-            <com.utils.CustomTextView
-                android:id="@+id/mobile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="2dp"
-                android:gravity="center_vertical"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="3dp"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                custom:fonttype="trebuchet_ms" />
+                <com.utils.CustomTextView
+                    android:id="@+id/pincode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="2dp"
+                    android:gravity="center_vertical"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:padding="3dp"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    custom:fonttype="trebuchet_ms" />
+
+                <com.utils.CustomTextView
+                    android:id="@+id/mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="2dp"
+                    android:gravity="center_vertical"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:padding="3dp"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    custom:fonttype="trebuchet_ms" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/layoutCurrentAddress"
@@ -696,76 +704,84 @@
                     android:textSize="14sp"
                     custom:fonttype="trebuchet_ms" />
 
-                <com.utils.CustomTextView
-                    android:id="@+id/addressUser"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="2dp"
-                    android:gravity="center_vertical"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:padding="3dp"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    custom:fonttype="trebuchet_ms" />
+                    android:layout_margin="5dp"
+                    android:orientation="vertical"
+                    android:padding="10dp" >
 
-                <com.utils.CustomTextView
-                    android:id="@+id/cityUser"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="2dp"
-                    android:gravity="center_vertical"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:padding="3dp"
-                    android:singleLine="true"
-                    android:text="@string/select_city"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    custom:fonttype="trebuchet_ms" />
+                    <com.utils.CustomTextView
+                        android:id="@+id/addressUser"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="2dp"
+                        android:gravity="center_vertical"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:padding="3dp"
+                        android:singleLine="true"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        custom:fonttype="trebuchet_ms" />
 
-                <com.utils.CustomTextView
-                    android:id="@+id/stateUser"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="2dp"
-                    android:gravity="center_vertical"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:padding="3dp"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    custom:fonttype="trebuchet_ms" />
+                    <com.utils.CustomTextView
+                        android:id="@+id/cityUser"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="2dp"
+                        android:gravity="center_vertical"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:padding="3dp"
+                        android:singleLine="true"
+                        android:text="@string/select_city"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        custom:fonttype="trebuchet_ms" />
 
-                <com.utils.CustomTextView
-                    android:id="@+id/pincodeUser"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="2dp"
-                    android:gravity="center_vertical"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:padding="3dp"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    custom:fonttype="trebuchet_ms" />
+                    <com.utils.CustomTextView
+                        android:id="@+id/stateUser"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="2dp"
+                        android:gravity="center_vertical"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:padding="3dp"
+                        android:singleLine="true"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        custom:fonttype="trebuchet_ms" />
 
-                <com.utils.CustomTextView
-                    android:id="@+id/mobileUser"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="2dp"
-                    android:gravity="center_vertical"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:padding="3dp"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    custom:fonttype="trebuchet_ms" />
+                    <com.utils.CustomTextView
+                        android:id="@+id/pincodeUser"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="2dp"
+                        android:gravity="center_vertical"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:padding="3dp"
+                        android:singleLine="true"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        custom:fonttype="trebuchet_ms" />
+
+                    <com.utils.CustomTextView
+                        android:id="@+id/mobileUser"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_margin="2dp"
+                        android:gravity="center_vertical"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:padding="3dp"
+                        android:singleLine="true"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        custom:fonttype="trebuchet_ms" />
+                </LinearLayout>
             </LinearLayout>
 
             <com.utils.CustomTextView
