--- a/res/layout/activity_adress_documents.xml
+++ b/res/layout/activity_adress_documents.xml
@@ -239,6 +239,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:maxLength="5"
                         android:padding="3dp"
                         android:textSize="15sp" >
                     </EditText>
@@ -290,7 +291,8 @@
                         android:id="@+id/editPhone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="number"
+                        android:inputType="phone"
+                        android:maxLength="10"
                         android:padding="3dp"
                         android:textSize="15sp" >
                     </EditText>
