--- a/res/layout/addresslayout.xml
+++ b/res/layout/addresslayout.xml
@@ -52,6 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
+        android:maxLength="5"
         android:hint="@string/enter_pincode"
         android:inputType="number"
         android:padding="3dp"
@@ -64,7 +65,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:hint="@string/enter_phone_number"
-        android:inputType="number"
+        android:inputType="phone"
+        android:maxLength="10"
         android:padding="3dp"
         android:textSize="15sp" >
     </EditText>
