--- a/res/layout/post_documents.xml
+++ b/res/layout/post_documents.xml
@@ -125,6 +125,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
+                    android:maxLength="10"
                     android:textSize="15sp" />
             </LinearLayout>
 
