--- a/res/drawable/fb_border_white.xml
+++ b/res/drawable/fb_border_white.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/transparent" />
+    <solid android:color="@color/fbcolor" />
 
     <stroke
         android:width="1dip"
-        android:color="@color/blue_dark" />
+        android:color="@color/white" />
 
     <corners android:radius="25dp" />
 
